deployments/poi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api
  labels:
    app: poi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
        - name: poi
          image: registryjzg0978.azurecr.io/poi:v1
          ports:
            - containerPort: 80
          volumeMounts:
          - name: secrets-store01-inline 
            mountPath: "/secrets"
            readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: poi
