deployments/trips.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api
  labels:
    app: trips
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
        - name: trips
          image: registryjzg0978.azurecr.io/trips:v1
          ports:
            - containerPort: 80
          volumeMounts:
          - name: secrets-store01-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true       
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: trips
