deployments/user-java.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  labels:
    app: user-java
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
        - name: user-java
          image: registryjzg0978.azurecr.io/user-java:v1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: user-java
