deployments/userprofile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  labels:
    app: userprofile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
        - name: userprofile
          image: registryjzg0978.azurecr.io/userprofile:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: userprofile
